samples/_failures_safe/1761518457_ac6bdf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88e1c326.c: In function ‘main’:
./samples/SAFE/__tmp_88e1c326.c:150:5: error: expected expression at end of input
  150 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_88e1c326.c:150:5: error: expected declaration or statement at end of input
